Changes to the data chart with Mean, median, std in it

--- a/Final_Project.ipynb
+++ b/Final_Project.ipynb
@@ -215,45 +215,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "id": "07d0334a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'mean'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[18]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m cities = [\u001b[33m'\u001b[39m\u001b[33mTampa\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mMiami\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mApalachicola\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mMadison\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mPensacola\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m city \u001b[38;5;129;01min\u001b[39;00m cities:\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m     city_precip_mean = \u001b[43mcity_precip\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmean\u001b[49m()\n\u001b[32m      5\u001b[39m     city_temp_mean = city_temp.mean()\n\u001b[32m      6\u001b[39m     city_precip_median = city_precip.median()\n",
-      "\u001b[31mAttributeError\u001b[39m: 'str' object has no attribute 'mean'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Creating a table of Values of Precipitation and temperature ###\n",
+    "### Creating a dictionary to store the data ###\n",
+    "city_data_dict = {}\n",
+    "# List of cities \n",
     "cities = ['Tampa', 'Miami', 'Apalachicola', 'Madison', 'Pensacola']\n",
+    "### Loop that iterates through the cities ###\n",
     "for city in cities:\n",
-    "    city_precip_mean = city_precip.mean()\n",
-    "    city_temp_mean = city_temp.mean()\n",
-    "    city_precip_median = city_precip.median()\n",
-    "    city_temp_median = city_temp.median()\n",
-    "    city_precip_std = city_precip.std()\n",
-    "    city_temp_std = city_temp.std()\n",
+    "   ### Calling the function to get the data for each city ###\n",
+    "   #city_precip, city_temp = plot_city_data(city)\n",
+    "\n",
+    "   city_data_dict[city] = {'Precipitation': city_precip, 'Temperature': city_temp}\n",
     "\n",
     "    ### Creating a table of values ###\n",
-    "    print(f'{city} Precipitation Statistics:')\n",
-    "    print('-'*40)\n",
-    "    Statistics = ['Mean', 'Median', 'Std']\n",
-    "    for var in Statistics:\n",
-    "        if var == 'Mean':\n",
-    "            print(f'{var}: {city_precip_mean:.3f} mm')\n",
-    "        elif var == 'Median':\n",
-    "            print(f'{var}: {city_precip_median:.3f} mm')\n",
-    "        elif var == 'Std':\n",
-    "            print(f'{var}: {city_precip_std:.3f}')\n",
-    "    print('-'*40)   \n",
+    "for city, data in city_data_dict.items():\n",
+    "     mean_precip = data['Precipitation'].mean()\n",
     "\n"
    ]
   },
